Support custom GSON instances